<resources>
    <string name="app_name">ExpanseProject</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="eur">EUR</string>
    <string name="currency_converter">Currency Converter</string>
    <string name="enter_number">Enter number</string>
    <string name="convert">Convert</string>
    <string name="an_error_occured">An error occurred</string>
    <string name="conversion_problem">Unable to convert, no rates</string>
    <string name="period">.</string>
</resources>
