<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.NavigationDrawerActivity"
    tools:showIn="@layout/app_bar_navigation_drawer">

    <TextView
        android:id="@+id/currency_converter_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/currency_converter"
        android:textColor="@color/expanse_blue"
        style="@style/Widget.MaterialComponents.CardView"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/period_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/period"
        android:layout_alignBaseline="@+id/currency_converter_text_view"
        android:layout_toEndOf="@+id/currency_converter_text_view"
        android:layout_toRightOf="@+id/currency_converter_text_view"
        android:textColor="@color/expanse_green"
        style="@style/Widget.MaterialComponents.CardView"
        android:textSize="40sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/currency_converter_text_view"
        android:id="@+id/currency_converter_layout">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:id="@+id/old_currency_linear_layout">

            <EditText
                android:id="@+id/old_currency_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:ems="10"
                android:radius="20dp"
                android:background="@color/colorLightGray"
                android:inputType="number"
                android:hint="@string/enter_number" >

                <requestFocus />

            </EditText>

            <TextView
                android:id="@+id/old_country_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/old_currency_edit_text"
                android:layout_alignBottom="@+id/old_currency_edit_text"
                android:layout_alignParentRight="true"
                android:textSize="20sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:layout_below="@+id/old_currency_linear_layout"
            android:id="@+id/new_currency_linear_layout">

            <EditText
                android:id="@+id/new_currency_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:background="@color/colorLightGray"
                android:enabled="false"
                android:inputType="number"
                android:hint="@string/enter_number" >

            </EditText>

            <TextView
                android:id="@+id/new_country_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/new_currency_edit_text"
                android:layout_alignBottom="@+id/new_currency_edit_text"
                android:layout_alignParentRight="true"
                android:textSize="20sp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_margin="12dp"
            android:id="@+id/spinners_linear_layout"
            android:layout_below="@+id/new_currency_linear_layout"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinner_old_currency"
                android:layout_width="0dp"
                android:layout_weight="0.35"
                android:clickable="false"
                android:layout_height="40dp">

            </Spinner>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="0.1"
                android:src="@drawable/convert_icon"/>

            <Spinner
                android:id="@+id/spinner_new_currency"
                android:layout_width="0dp"
                android:layout_weight="0.35"
                android:layout_height="40dp">

            </Spinner>

        </LinearLayout>

        <Button
            android:id="@+id/currency_converter_button"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinners_linear_layout"
            android:layout_marginTop="40dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textAllCaps="false"
            android:text="@string/convert"
            style="@style/Widget.AppCompat.Button.Colored"
            android:radius="90dp"
            android:bottomRightRadius="10dp"
            android:bottomLeftRadius="10dp"
            android:topLeftRadius="10dp"
            android:topRightRadius="10dp"
            android:textColor="@color/colorWhite"
            android:background="@color/expanse_green"/>

        <TextView
            android:layout_below="@+id/currency_converter_button"
            android:id="@+id/mid_market_text_time"
            android:layout_centerInParent="true"
            android:layout_marginTop="30dp"
            android:textSize="17sp"
            style="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:text="@string/action_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/info_icon"
            android:layout_marginStart="12dp"
            android:layout_alignBottom="@+id/mid_market_text_time"
            android:layout_toEndOf="@+id/mid_market_text_time"/>

    </RelativeLayout>

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/currency_converter_spin_kit"
        style="@style/SpinKitView.FadingCircle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        app:SpinKit_Color="@color/colorAccent" />

</RelativeLayout>